--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "wxcloudrun-express",
   "version": "1.0.0",
   "description": "微信云托管 express 框架模版",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -13,7 +13,8 @@
     "express": "^4.16.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.8.0"
+    "sequelize": "^6.8.0",
+    "uuid": "^10.0.0"
   },
   "engines": {
     "node": ">=12.0.0"
